# httpbin

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker.yml  lint.yml  main.yml  tests.yml
src/httpbin/: __init__.py  application.py  cmdline.py  config.py  log.py  main.py  utils.py
src/httpbin/config/: __init__.py  settings.yml
src/httpbin/routers/: __init__.py  dynamic.py  http_methods.py  request_inspection.py  response_formats.py  status_codes.py
src/httpbin/schemas/: __init__.py  responses.py
tests/: DOCKER_TESTING.md  __init__.py  conftest.py  test_cmdline.py  test_docker.js  test_docker.sh  test_dynamic.py  test_http_methods.py  test_log.py  test_request_inspection.py  test_response_formats.py  test_status_codes.py  test_version.py
