[tool.poetry]
name = "httpbin"
version = "0.0.1.dev1"
description = "My Awesome Project!"
readme = "README.md"
authors = ["huagang <huagang517@126.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.9"
click = "^8.1.3"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.poetry.plugins."console_scripts"]
httpbin = "httpbin.cmdline:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
