[project]
name = "httpbin"
version = "0.1.0"
description = "A simple HTTP Request & Response Service built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
httpbin = "httpbin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/httpbin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
